--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -135,6 +135,9 @@ $c-primary: #171717;
 .fs-34{
     font-size: 34px;
 }
+.fs-36{
+    font-size: 36px;
+}
 .fs-40{
     font-size: 40px;
 }
@@ -176,6 +179,9 @@ $c-primary: #171717;
         font-size: 24px;
     }
     .fs-34{
+        font-size: 24px;
+    }
+    .fs-36{
         font-size: 24px;
     }
     .fs-40{
@@ -222,6 +228,9 @@ $c-primary: #171717;
         font-size: 24px;
     }
     .fs-34{
+        font-size: 24px;
+    }
+    .fs-36{
         font-size: 24px;
     }
     .fs-40{
