--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 
 @import "pages/collection-detail";
 @import "pages/collection";
+@import "pages/cart";
 @import "pages/short";
 @import "pages/accessories";
 @import "pages/sale";
