--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -24,6 +24,7 @@
                 align-items: center;
                 text-decoration: none;
                 height: 100%;
+                width: 100%;
                 transition: all 0.3s ease;
                 box-shadow: none;
                 &:hover{
@@ -134,6 +135,12 @@
 }
 
 @media (max-width: 767px){
+    .footer-wrapper .footer-main .collapse:not(.show){
+        display: none !important;
+    }
+    .footer-wrapper .footer-copyright__inner-img{
+        text-align: center;
+    }
 
 }
 
