--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,5 +23,7 @@
 @import "pages/blog";
 @import "pages/underwear";
 @import "pages/home";
-@import "pages/section";
+@import "pages/account";
+@import "pages/we-made";
+@import "pages/collection-main";
 @import "pages/footer";
