--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,5 +1,17 @@
 // HEADING
 .heading-desktop{
+    // .site-topbar{
+    //     background-image: url(../../assets/images/Frame_1.png);
+    //     width: 100%;
+    //     background-color: #fa6400;
+    //     text-align: center;
+    //     padding: 5px 15px;
+    //     background-size: 235px;
+    //     a{
+    //     color: #fff;
+    //         text-decoration: none;
+    //     }
+    // }
     position: absolute;
     top: 0;
     left: 0;
@@ -33,8 +45,10 @@
                         list-style: none;
                         margin-bottom: 0;
                         &>.active{
-                            &>a{
-                                color: $c-orange;
+                            .accordion-header{
+                                a{
+                                    color: $c-orange;
+                                }
                             }
                         }
                         &>li{
@@ -83,6 +97,7 @@
                             }
                             .accordion-item{
                                 border: none;
+                                background: transparent;
                                 .accordion-button{
                                     display: none;
                                 }
@@ -327,13 +342,13 @@
 			}
 		}
 		&:focus {
-			width: 200px;
+			width: 150px;
 			padding: 0 10px;
 			outline: none;
 			color: black;
 			background:none;
 			+ span {
-				width: 200px;
+				width: 150px;
 				&::before {
 					width:2px;
 					opacity: 0;
@@ -382,7 +397,9 @@
         img{
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
+            object-position: center center;
+            background-color: rgb(246, 246, 246)
         }
     }
     &-content{
@@ -1226,55 +1243,63 @@
 }
 
 #navbar {
-    background-color: #fff; /* Black background color */
+    background-color: transparent; /* Black background color */
     position: fixed; /* Make it stick/fixed */
     top: 0; /* Stay on top */
     width: 100%; /* Full width */
     transition: top 0.3s; /* Transition effect when sliding down (and up) */
   }
 // //STICKY
-// .sticky {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     background: #Fff;
-//     box-shadow: 0 10px 30px rgba(black, 0.075);
-//     -webkit-transition: all 0.5s ease;
-//     -moz-transition: all 0.5s ease;
-//     -ms-transition: all 0.5s ease;
-//     -o-transition: all 0.5s ease;
-//     transition: all 0.5s ease;
-//     z-index: 99;
-//     .navbar-brand {
-//         img {
-//             -webkit-transition: all 0.3s ease;
-//             -moz-transition: all 0.3s ease;
-//             -ms-transition: all 0.3s ease;
-//             -o-transition: all 0.3s ease;
-//             transition: all 0.3s ease;
-//             height: 50px;
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #Fff !important;
+    box-shadow: 0 10px 30px rgba(black, 0.075);
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    z-index: 99;
+    .navbar-brand {
+        img {
+            -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+            height: 50px;
             
-//         }
-//     }
-//     .navbar-collapse .offcanvas-body{
-//         padding: 0;
-//         -webkit-transition: all 0.3s ease;
-//             -moz-transition: all 0.3s ease;
-//             -ms-transition: all 0.3s ease;
-//             -o-transition: all 0.3s ease;
-//             transition: all 0.3s ease;
+        }
+    }
+    .navbar-collapse .offcanvas-body{
+        padding: 0;
+        -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            transition: all 0.3s ease;
         
-//     }
-//     .navbar-site-tools ul li a{
-//         padding-top: 15px;
-//         -webkit-transition: all 0.3s ease;
-//             -moz-transition: all 0.3s ease;
-//             -ms-transition: all 0.3s ease;
-//             -o-transition: all 0.3s ease;
-//             transition: all 0.3s ease;
-//     }
-// }
+    }
+    .navbar-site-tools ul li a{
+        padding-top: 15px;
+        -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+    }
+    .navbar-site-tools ul li form{
+        padding-top: 15px;
+        -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+    }
+}
 
 .btn-close:focus{
     box-shadow: none;
@@ -1624,6 +1649,9 @@
     }
     .heading-desktop__inner .navbar-site-tools ul li a, .heading-desktop__inner .navbar-site-tools ul li form{
         padding: 5px 0;
+    }
+    .heading-desktop__inner .navbar-collapse .offcanvas-body > ul > li .accordion-header > a span{
+        font-size: 16px;
     }
    
 }
