--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -647,75 +647,84 @@
 // SECTION SUB CONTENT
 
 .sub-content{
-    &>.row{
-        &>.col-md-5{
-            padding: 0 5px;
-        }
-        &>.col-md-7{
-            padding: 0 5px;
-        }
-    }
+    display: flex;
+    align-items: center;
     .sub-product{
-        display: flex;
-        margin: 0 5px;
         height: 100%;
-        &>.row{
-            &>.col-md-4{
-                padding: 0 5px;
-            }
-            &>.col-md-4:nth-child(1){
-                .sub-product__item{
-                    background: #e7f2ff;
-                    -webkit-transition: all 0.3s ease;
-                                -moz-transition: all 0.3s ease;
-                                -ms-transition: all 0.3s ease;
-                                -o-transition: all 0.3s ease;
-                                transition: all 0.3s ease;
-                    &:hover{
-                        background: transparent;
-                        .sub-product__item-demo::after{
-                            background: #e7f2ff;
-                            opacity: 1;
+        width: 41.6666666667%;
+        margin-right: 5px;
+        &__wrapper {
+            margin-right: 5px;
+           
+            &-top{
+                display: flex;
+                gap: 10px ;
+                padding-bottom: 5px;
+                .sub-product__inner{
+                    width: 33.333%;
+                }
+                .sub-product__inner:nth-child(1){
+                    .sub-product__item{
+                        background: #e7f2ff;
+                        -webkit-transition: all 0.3s ease;
+                                    -moz-transition: all 0.3s ease;
+                                    -ms-transition: all 0.3s ease;
+                                    -o-transition: all 0.3s ease;
+                                    transition: all 0.3s ease;
+                        &:hover{
+                            background: transparent;
+                            .sub-product__item-demo::after{
+                                background: #e7f2ff;
+                                opacity: 1;
+                            }
                         }
                     }
                 }
-            }
-            &>.col-md-4:nth-child(2){
-                .sub-product__item{
-                    background: #e0eeea;
-                    -webkit-transition: all 0.3s ease;
-                                -moz-transition: all 0.3s ease;
-                                -ms-transition: all 0.3s ease;
-                                -o-transition: all 0.3s ease;
-                                transition: all 0.3s ease;
-                    &:hover{
-                        background: transparent;
-                        .sub-product__item-demo::after{
-                            background: #e0eeea;
-                            opacity: 1;
+                .sub-product__inner:nth-child(2){
+                    .sub-product__item{
+                        background: #e0eeea;
+                        -webkit-transition: all 0.3s ease;
+                                    -moz-transition: all 0.3s ease;
+                                    -ms-transition: all 0.3s ease;
+                                    -o-transition: all 0.3s ease;
+                                    transition: all 0.3s ease;
+                        &:hover{
+                            background: transparent;
+                            .sub-product__item-demo::after{
+                                background: #e0eeea;
+                                opacity: 1;
+                            }
                         }
                     }
                 }
-            }
-            &>.col-md-4:nth-child(3){
-                .sub-product__item{
-                    background: #f6efe0;
-                    -webkit-transition: all 0.3s ease;
-                                -moz-transition: all 0.3s ease;
-                                -ms-transition: all 0.3s ease;
-                                -o-transition: all 0.3s ease;
-                                transition: all 0.3s ease;
-                    &:hover{
-                        background: transparent;
-                        .sub-product__item-demo::after{
-                            background: #f6efe0;
-                            opacity: 1;
+                .sub-product__inner:nth-child(3){
+    
+                    .sub-product__item{
+                        background: #f6efe0;
+                        -webkit-transition: all 0.3s ease;
+                                    -moz-transition: all 0.3s ease;
+                                    -ms-transition: all 0.3s ease;
+                                    -o-transition: all 0.3s ease;
+                                    transition: all 0.3s ease;
+                        &:hover{
+                            background: transparent;
+                            .sub-product__item-demo::after{
+                                background: #f6efe0;
+                                opacity: 1;
+                            }
                         }
                     }
                 }
+
             }
-            &>.col-md-4:nth-child(4){
-                .sub-product__item{
+           &-bottom{
+            display: flex;
+            padding-top: 5px;
+            gap: 10px ;
+            .sub-product__inner{
+                width: 33.333%;
+            }
+            .sub-product__inner:nth-child(1){
                     background: #ede6f9;
                     -webkit-transition: all 0.3s ease;
                                 -moz-transition: all 0.3s ease;
@@ -730,9 +739,9 @@
                             opacity: 1;
                         }
                     }
-                }
+                
             }
-            &>.col-md-4:nth-child(5){
+            .sub-product__inner:nth-child(2){
                 .sub-product__item{
                     background: #f9e6e6;
                     -webkit-transition: all 0.3s ease;
@@ -749,7 +758,7 @@
                     }
                 }
             }
-            &>.col-md-4:nth-child(6){
+            .sub-product__inner:nth-child(3){
                 .sub-product__item{
                     background: #fff1e8;
                     -webkit-transition: all 0.3s ease;
@@ -766,7 +775,12 @@
                     }
                 }
             }
+
         }
+           
+            
+        }  
+       
         &__item{
             display: flex;
             flex-direction: column;
@@ -831,6 +845,8 @@
     }
     .sub-main{
      height: 100%;
+     width: calc( 100% - 41.6666666667%);
+     margin-left: 5px;
         display: flex;
         align-items: center;
         background: url(../../assets/images/coolsub.jpg) no-repeat center center/cover;
@@ -839,6 +855,7 @@
             height: 100%;
             .sub-main__title{
                 line-height: 1;
+                font-size: 75px;
             }
             .sub-main__label{
                 margin-bottom: 10px;
@@ -916,6 +933,10 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            .donate-number {
+                font-size: 44px;
+                line-height: 1;
+            }
         }
     }
 }
@@ -1079,7 +1100,6 @@
 
 //SECTION NEWS
 .section-news{
-    background: #eee;
     margin: 50px 0;
     &__slogan{
         height: 100%;
@@ -1088,9 +1108,14 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        background: #eee;
+        .heading-font{
+         font-size: 48px;
+        }
     }
     .news-item{
         position: relative;
+        margin-left: 10px;
         &__img{
             min-height: 286px;
         }
@@ -1307,6 +1332,9 @@
 
 //RESPONSIVE FOR IPAD
 @media (min-width: 768px) and (max-width: 1023px){
+    .sub-content{
+        flex-direction: column;
+    }
     
     .site-service{
         padding: 0;
@@ -1436,6 +1464,42 @@
       .heading-desktop__inner .navbar-site-tools ul li a, .heading-desktop__inner .navbar-site-tools ul li form{
           padding-top: 20px;
       }
+      .sub-content .sub-product{
+        width: 100%;
+        margin-bottom: 10px;
+      }
+      .sub-content .sub-main{
+          width: 100%;
+      }
+      .sub-content .sub-product .row > .col-md-4{
+        padding-right: calc(var(--bs-gutter-x)/ 2);
+        padding-left: calc(var(--bs-gutter-x)/ 2);
+      }
+      .sub-content .sub-product .row > .col-md-4:nth-child(1){
+          margin-bottom: 10px;
+      }
+      .sub-content .sub-product .row > .col-md-4:nth-child(2){
+        margin-bottom: 10px;
+    }
+    .sub-content .sub-product .row > .col-md-4:nth-child(3){
+        margin-bottom: 10px;
+    }
+    .sub-content .sub-product .sub-product__wrapper{
+        margin-bottom: 20px;
+    }
+    .section-news__slogan br{
+        display: none;
+    }
+    .section-news .news-item{
+        margin: 0 5px;
+    }
+    .banner-content__slide .banner-slide__container .banner-slide__item img{
+        max-width: 100%;
+        
+    }
+    .banner-content .sub-content{
+        align-items: flex-start;
+    }
       
 }
 
@@ -1476,15 +1540,15 @@
 
      }
      .section-product .product-hot__content .product-hot__main{
-         padding: 10px;
+         padding: 10px 0;
+         width: 100%;
+         border: none;
      }
      .product-hot__arrows{
          display: none;
      }
      .sub-content .sub-main__wrapper .sub-main__infor .sub-main__infor-item{
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
 
      }
@@ -1493,11 +1557,17 @@
          flex-direction: column;
          align-items: center;
      }
+     .sub-content .sub-main__wrapper .sub-main__action .btn-inner a{
+        min-height: auto;
+    }
      .section-feedback__slide .feedback-slide__item .slide-img{
         display: none;
     }
     .section-news__slogan{
         padding: 20px;
+    }
+    .section-news__slogan br{
+        display: none;
     }
     .section-story__wrapper .section-story__heading{
         position: static;
@@ -1515,11 +1585,12 @@
         flex-direction: column;
     }
     .footer-wrapper .footer-cover__inner > a{
-        justify-content: center;
+        justify-content: flex-start;
+     
     }
     .footer-wrapper .footer-cover__inner .social-grid{
         justify-content: center;
-        margin-top: 20px;
+        margin-top: 10px;
     }
 
     //menu
@@ -1637,7 +1708,7 @@
         font-size: 16px;
     }
     .heading-desktop__inner .navbar-site-tools ul li:last-child a{
-        background: #fff;
+        background: transparent;
         color: #000;
     }
     .heading-desktop__inner .navbar-site-tools ul li:not(:last-child){
@@ -1652,6 +1723,182 @@
     }
     .heading-desktop__inner .navbar-collapse .offcanvas-body > ul > li .accordion-header > a span{
         font-size: 16px;
+    }
+
+    .section-product .product-news__slide .slick-dots{
+        display: none !important;
+    }
+    .section-product .product-hot__content .product-hot__slide{
+       flex-direction: column;
+       padding: 0 5px;
+    }
+    .section-product .product-hot__content .slick-dots{
+        top: auto !important;
+        li.slick-active button:after{
+            width: 10px;
+            height: 10px;
+            background-color: $c-orange;
+            opacity: 1;
+        }
+        li{
+            width: 20px;
+        }
+        li button::after{
+            width: 10px;
+            height: 10px;
+            opacity: .3;
+
+        }
+        li button::before{
+            width: 10px;
+            height: 10px;
+
+        }
+     }
+    .section-product .product-hot__content .product-hot__main .product-hot__descreption{
+        display: none;
+    }
+    .section-product .product-hot__content .product-hot__main .product-hot__link{
+        position: relative;
+    }
+    .section-product .product-hot__content .product-hot__main-infor .product-hot__sale-heading{
+        padding: 0 4px;
+    }
+    .section-product .product-hot__content .product-hot__main .product-hot__link{
+        display: none;
+    }
+    .section-product .product-hot__content .product-hot__slide .product-hot__item-img{
+        width: 100%;
+    }
+    .section-product .product-hot__content .product-hot__main-infor .product-hot__wrapper{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .sub-content{
+        flex-direction: column;
+    }
+    .sub-content .sub-product{
+        width: 100%;
+      }
+      .sub-content .sub-main{
+          width: 100%;
+      }
+      .sub-content .sub-product .row > .col-md-4{
+        padding-right: calc(var(--bs-gutter-x)/ 2);
+        padding-left: calc(var(--bs-gutter-x)/ 2);
+      }
+      .sub-content .sub-product .row > .col-md-4:nth-child(1){
+          margin-bottom: 10px;
+      }
+      .sub-content .sub-product .row > .col-md-4:nth-child(2){
+        margin-bottom: 10px;
+    }
+    .sub-content .sub-product .row > .col-md-4:nth-child(3){
+        margin-bottom: 10px;
+    }
+    .sub-content .sub-product .sub-product__wrapper{
+        margin-bottom: 20px;
+    }
+    .sub-content .sub-product__item-demo{
+        height: 107px;
+    }
+    .sub-content .sub-product__item{
+        min-height: auto;
+        padding: 30px 10px 20px;
+    }
+    .sub-content .sub-product{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .sub-content .sub-product__item-title{
+        font-weight: 500 !important;
+    }
+    .sub-content .sub-product{
+        margin-bottom: 10px;
+        margin-right: 0 !important;
+
+    }
+    .sub-content .sub-main__wrapper .sub-main__title{
+        font-size: 60px;
+    }
+    .sub-content .sub-main__wrapper .sub-main__infor-item .infor-item__img{
+        margin-right: 20px;
+        padding: 15px;
+    }
+    .sub-content .sub-main__wrapper .sub-main__infor-item .infor-item__img img{
+       width: 26px;
+    }
+    .sub-content .sub-main__wrapper .sub-main__action .btn-inner{
+        margin: 0;
+        margin-bottom: 10px;
+    }
+    .sub-content .sub-main__wrapper .sub-main__infor{
+        margin-bottom: 20px;
+    }
+   
+    .section-feedback__slide .slick-dots{
+        display: none !important;
+    }
+    .section-news__slogan .heading-font{
+        font-size: 30px;
+    }
+    .section-news .news-item{
+        margin: 0 10px;
+    }
+    .site-service__inner > .row > .col-md-3:not(:last-child) .site-service__item{
+        border-right: none;
+        border-bottom: 1px solid #ebebeb;
+    }
+    .banner{
+        .banner-slide__arrows{
+            display: none;
+        }
+    }
+    .banner-content .sub-content{
+        align-items: flex-start;
+    }
+    .banner-content .heading-content{
+        margin-bottom: 40px;
+    }
+    .banner-content__slide .banner-slide__container .banner-slide__item{
+        margin: 0;
+    }
+    .banner-content__slide .banner-slide__container .banner-slide__item img{
+        max-width: 100%;
+        border-radius: 0;
+    }
+   .heading-desktop__inner .navbar-site-tools ul li form{
+        display: none;
+    }
+    .footer-wrapper .footer-cover__inner .cover-img{
+        margin-right: 20px;
+    }
+    .section-care__donate-inner{
+        border: none;
+    }
+    .banner .banner-bg{
+        display: none;
+
+    }
+    .banner .banner-content .banner-content__main{
+        display: none;
+    }
+    .banner .banner-content{
+        justify-content: center;
+        margin-top: 80px;
+
+    }
+    .banner{
+        height: auto;
+        padding-bottom: 0;
+    }
+    .site-service__item{
+        padding-left: 0;
+        padding-right: 0;
+        justify-content: flex-start;
+    }
+    .site-service__item .site-service__item-label{
+        font-size: 13px;
     }
    
 }
