--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,14 +15,22 @@
 @import "pages/collection-detail";
 @import "pages/collection";
 @import "pages/cart";
+@import "pages/promotion-policy";
 @import "pages/short";
 @import "pages/accessories";
 @import "pages/sale";
 @import "pages/print";
 @import "pages/infor-size";
 @import "pages/blog";
+@import "pages/factory";
+@import "pages/shipping";
+@import "pages/refund-changed";
 @import "pages/underwear";
 @import "pages/home";
+@import "pages/member";
+@import "pages/customer-feedback";
+@import "pages/story";
+@import "pages/privacy-term";
 @import "pages/account";
 @import "pages/we-made";
 @import "pages/collection-main";
