--- a/scss/pages/account.scss
+++ b/scss/pages/account.scss
@@ -136,6 +136,9 @@
     .account-site__wrapper .account-content__wrapper{
         max-width: 100%;
     }
+    .account-site{
+        margin-top: 40px;
+    }
  }
 
 
