--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -142,6 +142,13 @@
         text-align: center;
     }
 
+    .footer-wrapper .footer-main .accordion-button::after{
+        display: block;
+    }
+    .footer-wrapper .footer-cover__inner .social-grid .social-item{
+        max-width: 60px;
+    }
+
 }
 
 @media (min-width: 768px) and (max-width: 1023px){ 
