--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,3 +1,37 @@
+.site-category{
+    background: #000;
+    padding: 10px 0;
+    visibility: hidden;
+    display: none;
+    &__wrapper{
+        ul{
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: space-between;
+            overflow: scroll;
+            width: 350px;
+            li:not(:last-child){
+                margin-right: 20px;
+            }
+            li{
+                a{
+                    text-transform: uppercase;
+                    color: #fff;
+                    font-weight: bold;
+                    white-space: nowrap;
+                }
+            }
+            .active{
+                a{
+                    color:$c-orange;
+                }
+            }
+        }
+    }
+}
+
+
 // HEADING
 .heading-desktop{
     // .site-topbar{
@@ -18,6 +52,12 @@
     z-index: 1;
     width: 100vw;
     padding: 0 20px;
+    .add-bag{
+        color: #fff;
+        box-shadow: 2px 2px 4px rgba(#000,0.2);
+        border-radius: 100px 100px 0px 0px;
+        padding: 10px 40px;
+    }
     &__inner{
         .navbar{
             display: flex;
@@ -312,12 +352,6 @@
         }
     }
 }
-.heading-desktop__default{
-    position: static;
-    border-bottom: 2px solid #e3e3e9;
-    background: #fbfbfb;
-}
-
 //SECRCH BOX
 
 .search-box {	
@@ -434,6 +468,35 @@
                         max-width: 550px;
                     }
                 }
+                .slick-dots{
+                    bottom: auto;
+                    top: 20px;
+                    li{ 
+                        width: 20px;
+                        &:not(:last-child){
+                            margin-right: 10px;
+                        }
+                    }
+                    li.slick-active button:after{
+                        height: 5px;
+                        border-radius: 0;
+                        width: 20px;
+                        border-radius: 10px;
+                        background: #fff;
+                    }
+                    li button:before{
+                        height: 5px;
+                        border-radius: 0;
+                        width: 20px;
+                        border-radius: 10px;
+
+                    }
+                    li button:after{
+                        width: 20px;
+                        border-radius: 10px;
+
+                    }
+                }
             }
         }
     }
@@ -471,10 +534,7 @@
         }
     }
 }
-
-
 //BODY
-
 
 //section-product
 
@@ -1262,11 +1322,10 @@
 }
 
 //banner-default
-
-.banner-default{
+.site-content{
     padding-top: 98px;
-}
 
+}
 #navbar {
     background-color: transparent; /* Black background color */
     position: fixed; /* Make it stick/fixed */
@@ -1279,7 +1338,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     background-color: #Fff !important;
     box-shadow: 0 10px 30px rgba(black, 0.075);
     -webkit-transition: all 0.5s ease;
@@ -1295,7 +1353,6 @@
             -ms-transition: all 0.3s ease;
             -o-transition: all 0.3s ease;
             transition: all 0.3s ease;
-            height: 50px;
             
         }
     }
@@ -1325,6 +1382,19 @@
             transition: all 0.3s ease;
     }
 }
+.sticky-cate {
+   
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-shadow: 0 10px 30px rgba(black, 0.075);
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    z-index: 99;
+}
 
 .btn-close:focus{
     box-shadow: none;
@@ -1332,6 +1402,9 @@
 
 //RESPONSIVE FOR IPAD
 @media (min-width: 768px) and (max-width: 1023px){
+    .site-content{
+        padding-top: 80px;
+    }
     .sub-content{
         flex-direction: column;
     }
@@ -1496,6 +1569,7 @@
     .banner-content__slide .banner-slide__container .banner-slide__item img{
         max-width: 100%;
         
+        
     }
     .banner-content .sub-content{
         align-items: flex-start;
@@ -1609,6 +1683,7 @@
     }
     .heading-desktop__inner .navbar-collapse.show{
         transform: translateY(-0);
+      
     }
     .navbar-toggler:focus{
         box-shadow: none;
@@ -1691,12 +1766,6 @@
     .heading-desktop__inner .navbar-site-tools ul li a{
         padding-top: 5px;
         padding-bottom: 5px;
-    }
-    .heading-desktop{
-        padding-top: 20px;
-        padding-bottom: 10px;
-        padding-right: 0;
-        padding-left: 0;
     }
     .heading-desktop__inner .navbar-brand{
         width: 100px;
@@ -1866,6 +1935,10 @@
     .banner-content__slide .banner-slide__container .banner-slide__item img{
         max-width: 100%;
         border-radius: 0;
+        max-height: calc(100vh - 80px);
+        width: 100%;
+        object-fit: cover;
+       background-position: center center;
     }
    .heading-desktop__inner .navbar-site-tools ul li form{
         display: none;
@@ -1885,8 +1958,7 @@
     }
     .banner .banner-content{
         justify-content: center;
-        margin-top: 80px;
-
+        max-height: 100vh;
     }
     .banner{
         height: auto;
@@ -1900,7 +1972,38 @@
     .site-service__item .site-service__item-label{
         font-size: 13px;
     }
-   
+
+    .banner-content__slide .banner-slide__container .banner-slide__item img{
+        max-height: 100vh;
+    }
+    .heading-desktop{
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-right: 0;
+        padding-left: 0;
+        bottom: 0;
+        top: auto;
+        position: fixed;
+        z-index: 99;
+        .heading-desktop__inner{
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(#000, 0.2);
+            padding: 5px 0;
+            
+        }
+    }
+    .sticky{
+        bottom: 0;
+        background-color: transparent !important;
+    }
+    .site-content{
+        padding-top: 0;
+    }
+    .sticky-cate {
+        display: block;
+        visibility: visible;
+    }
 }
 
 //RESPONSIVE FOR IPAD PRO
