--- a/scss/pages/cart.scss
+++ b/scss/pages/cart.scss
@@ -389,7 +389,7 @@ button[type=submit]{
         padding: 30px 0;
     }
     .cart-site{
-        padding-top: 80px;
+        padding-top: 0;
     }
 
 }
@@ -419,7 +419,7 @@ button[type=submit]{
         margin-bottom: 20px;
     }
     .cart-site{
-        padding-top: 80px;
+        padding-top: 0;
     }
     
     
